    - fix missing padding for small details window sizes (LP: #560026)
  * softwarecenter/view/widgets/searchentry.py:
   - Set the search entry's text color to black when not empty.
     This makes it readable on dark themes with a light text color by  
     default (LP: #500174)
  * softwarecenter/app.py:
    - avoid 100% usage when waiting for software-sources to finish
      (LP: #459521)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 20 Apr 2010 17:55:55 +0200

software-center (2.0.2) lucid; urgency=low

  * softwarecenter/view/appview.py:
    - improve responsiveness of the listview by caching the 
      rendered icons (LP: #556290)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Sun, 18 Apr 2010 13:42:50 +0200

software-center (2.0.1) lucid; urgency=low

  [ Olivier Tilloy ]
  * When computing the size of a PathPart, always set the requested height
    of the parent PathBar. This prevents the navigation bar from
    "disappearing" (its height was somehow set to 1) (LP: #564042)

  [ Michael Vogt ]
  * cherry r730 lp:~mmcg069/software-center/minor-change/changes:
    - fix CellRendererAppView text rendering when using hicolor gtk theme
    (LP: #564694)
  * softwarecenter/view/viewswitcher.py:
    - fix displaying duplicated entries in the partner channel
      (LP: #564789)
  * softwarecenter/view/availablepane.py, 
    softwarecenter/view/channelpane.py,
    softwarecenter/view/installedpane.py:
    - only send size information signals if we actually have a model
      (LP: #564756)
  * softwarecenter/view/availablepane.py:
    - if we get a "search-terms-changed" signal while in the applicatin
      details page it got delivered asynchronously and must be discarded
      (LP: #563524)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 16 Apr 2010 23:27:14 +0200

software-center (2.0) lucid; urgency=low

  [ Michael Vogt ]
  * softwarecenter/view/channelpane.py:
    - fix crash when gdk window is not (yet) available (LP: #560320)